--- a/home/index.html
+++ b/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
 <title>tootch's hangout</title>
-<link rel="stylesheet" href="/tootchs-hangout/home/styles.css">
+<link rel="stylesheet" href="/home/styles.css"/>
     </head>
 
 
